tests/textual/error/mkCons-no-force.uplc
(program 0.0.0 [[(builtin mkCons) (con integer 0)] (con list(integer) [ ])])